add_library(e_ap STATIC
        accounting.c
        ap_config.c
        ap_drv_ops.c
        ap_list.c
        ap_mlme.c
        airtime_policy.c
        authsrv.c
        beacon.c
        bss_load.c
        ctrl_iface_ap.c
        dfs.c
        dhcp_snoop.c
        drv_callbacks.c
        eap_user_db.c
        eth_p_oui.c
        gas_serv.c
        hostapd.c
        hs20.c
        hw_features.c
        ieee802_11_auth.c
        ieee802_11.c
        ieee802_11_ht.c
        ieee802_11_shared.c
        ieee802_11_vht.c
        ieee802_1x.c
        neighbor_db.c
        ndisc_snoop.c
        p2p_hostapd.c
        pmksa_cache_auth.c
        preauth_auth.c
        rrm.c
        sta_info.c
        tkip_countermeasures.c
        utils.c
        vlan.c
        vlan_ifconfig.c
        vlan_init.c
        wmm.c
        wnm_ap.c
        wpa_auth.c
        wpa_auth_ft.c
        wpa_auth_glue.c
        wpa_auth_ie.c
        wps_hostapd.c
        x_snoop.c)