add_library(e_eap_common STATIC
        chap.c
        eap_common.c
        eap_eke_common.c
        eap_eke_common.c
        eap_fast_common.c
        eap_gpsk_common.c
        eap_ikev2_common.c
        eap_pax_common.c
        eap_peap_common.c
        eap_psk_common.c
        eap_pwd_common.c
        eap_sake_common.c
        eap_sim_common.c
        eap_wsc_common.c
        ikev2_common.c
        )